# laravel.vpd121.com/routes/api.php
@@ -2,6 +2,7 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\AuthController;
 
 /*
 |--------------------------------------------------------------------------
@@ -14,12 +15,27 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
-});
 
+Route::group([
+    'middleware' => 'api',
+    'prefix' => 'auth'
+], function ($router) {
+    Route::post('/login', [AuthController::class, 'login']);
+    Route::post('/register', [AuthController::class, 'register']);
+    Route::post('/logout', [AuthController::class, 'logout']);
+    Route::post('/refresh', [AuthController::class, 'refresh']);
+    Route::get('/user-profile', [AuthController::class, 'userProfile']);
+});
 Route::get("/category",[\App\Http\Controllers\CategoryController::class,'index']);
 Route::post("/category",[\App\Http\Controllers\CategoryController::class,'create']);
 Route::get("/category/{id}",[\App\Http\Controllers\CategoryController::class,'getById']);
 Route::post("/category/edit/{id}",[\App\Http\Controllers\CategoryController::class,'edit']);
 Route::delete("/category/{id}",[\App\Http\Controllers\CategoryController::class,'delete']);
+
+
+Route::get("/product",[\App\Http\Controllers\ProductController::class,'index']);
+Route::post("/product",[\App\Http\Controllers\ProductController::class,'create']);
+Route::post("/product/edit/{id}",[\App\Http\Controllers\ProductController::class,'edit']);
+Route::delete("/product/{id}",[\App\Http\Controllers\ProductController::class,'delete']);
+
+
